# ratatui-type-and-scroll

./: Cargo.toml  README.md
src/: main.rs
