[package]
name = "ratatui-type-and-scroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
